// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideDrawer renders correctly 1`] = `
<nav
  className="side-drawer"
>
  <div
    className="wrapper"
  >
    <Button
      classes="other"
      clickHandler={[Function]}
      key="0"
      text="SignIn"
    />
    ,
    <Button
      classes="other"
      clickHandler={[Function]}
      key="1"
      text="SignUp"
    />
    <div
      className="signin form"
    >
      <Connect(SignInForm) />
      <Button
        text="Login"
      />
    </div>
    <Footer />
  </div>
</nav>
`;

exports[`SideDrawer renders correctly with props, open: true 1`] = `
<nav
  className="side-drawer open"
>
  <div
    className="wrapper"
  >
    <Button
      classes="other"
      clickHandler={[Function]}
      key="0"
      text="SignIn"
    />
    ,
    <Button
      classes="other"
      clickHandler={[Function]}
      key="1"
      text="SignUp"
    />
    <div
      className="signin form"
    >
      <Connect(SignInForm) />
      <Button
        text="Login"
      />
    </div>
    <Footer />
  </div>
</nav>
`;
